--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "clue/socket-raw": "^1.2",
-        "psr/log": "^1.0",
+        "php": "^8.1",
+        "clue/socket-raw": "^1.6",
+        "psr/log": "^1.0|^3.0",
         "symfony/process": "^3.3|^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "monolog/monolog": "^1.23",
-        "phpunit/phpunit": "^6.5|^7.0|^8.0"
+        "monolog/monolog": "^1.23|^3.3.0",
+        "phpunit/phpunit": "^6.5|^7.0|^8.0|^10.0"
     },
     "suggest": {
         "ext-weakref": "Required to run all the tests"
