--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "clue/socket-raw": "^1.6",
         "psr/log": "^1.0|^3.0",
-        "symfony/process": "^3.3|^4.0|^5.0|^6.0"
+        "symfony/process": "^3.3|^4.0|^5.0|^6.0|^7.0"
     },
     "require-dev": {
-        "monolog/monolog": "^1.23|^3.3.0",
+        "monolog/monolog": "^1.23|^3.3",
         "phpunit/phpunit": "^6.5|^7.0|^8.0|^10.0"
     },
     "suggest": {
